se agregaron los placeholder de controlCalidad a diccionario para su correcta traduccion. se acomodo los compas foraneos en modificar en controlCalidad. se acomodo la distancia entre el icono y el titulo en el index template.

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -222,6 +222,13 @@ dictionary:
     editQualityControl:   Edit Quality Control
     qualityControlInformation: Quality Control Information
     newQualityControl:    New Quality Control
+    enterTheDate:        Enter the Date
+    enterTheTurn:        Enter the Turn
+    enterTheBrix:        Enter the Brix
+    enterThePh:          Enter the Ph
+    enterTheAr:          Enter the Ar
+    enterTheSaccharose:  Enter the Saccharose
+    enterThePurity:      Enter the Purity
     ##-----------------control calidad---------------------------##
      
     ##---------------------- DETALLE EMPAQUE----------------------------##
