formularios en entrada bodega

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -29,6 +29,7 @@ dictionary:
     back:                 Atrás
     delete:               Eliminar
     detail:               Detalle
+    enlist:               Enlistar
     deleteSelect:         Eliminar Seleccionados
     successfulRegister:   El Registro Fue Exitoso.
     successfulUpdate:     La Actualización Fue Exitosa.
