--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -31,6 +31,7 @@ dictionary:
     enlist:               Enlist
     start:                Start
     end:                  End
+    enlist:               Enlist
     deleteSelect:         Remove Selected
     successfulRegister:   The Register Was Successful.
     successfulUpdate:     Update Was Successful.
