--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -242,6 +242,7 @@ dictionary:
     errorLengthDirection:   Error Your Direction (%direccion%) Maximum Exceeds Number of Characters (%caracteres%).
     errorLengthNumIdentification: Error Your identification number (%numIdentificacion%) Maximum Exceeds Number of Characters (%caracteres%).
     errorMail:              The Mail No Coincide.
+    errorMailCharacters:    The Mail Should Be (example@example.com).
     ##---------------------- ERRORES----------------------------##
     ##-------------------------- ERRORES --------------------##
   errors:
