--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -248,6 +248,7 @@ dictionary:
     errorNull:              Error The Fields Must Be Filled Out.
     errorMailCharacters:    The Mail Should Be (example@example.com).
     errorLenghtDesc:        Error Your Description (%desc_tipo_doc%) Maximum Exceeds Number of Characters (%caracteres%).
+    errorText:              Just be accepted Lyrics, No Number (%texto%).
     ##---------------------- ERRORES----------------------------##
     ##-------------------------- ERRORES --------------------##
   errors:
