validaciones en Entrada Bodega y Tipo Documento

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -247,8 +247,9 @@ dictionary:
     errorNumeric:           Error The Field Must Be Only Numeric.
     errorNull:              Error The Fields Must Be Filled Out.
     errorMailCharacters:    The Mail Should Be (example@example.com).
-    errorLenghtDesc:        Error Your Description (%desc_tipo_doc%) Maximum Exceeds Number of Characters (%caracteres%).
     errorText:              Just be accepted Lyrics, No Number (%texto%).
+    errorLengthDesc:        Error Your description (%desc_tipo_doc%) Maximum Exceeds Number of Characters (%caracteres%).
+   
     ##---------------------- ERRORES----------------------------##
     ##-------------------------- ERRORES --------------------##
   errors:
