validaciones en control calidad y fondo

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -243,6 +243,8 @@ dictionary:
     errorMail:              The Mail No Coincide.
     errorLengthAmount:      Error Your amount (%cantidad%) Maximum Exceeds Number of Characters (%caracteres%).
     errorLengthValue:       Error Your value (%valor%) Maximum Exceeds Number of Characters (%caracteres%).
+    errorNumeric:           Error The Field Must Be Only Numeric.
+    errorNull:              Error The Fields Must Be Filled Out.
     ##---------------------- ERRORES----------------------------##
     ##-------------------------- ERRORES --------------------##
   errors:
