--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -249,6 +249,7 @@ dictionary:
     errorMailCharacters:    The Mail Should Be (example@example.com).
     errorText:              Just be accepted Lyrics, No Number (%texto%).
     errorLengthDesc:        Error Your description (%desc_tipo_doc%) Maximum Exceeds Number of Characters (%caracteres%).
+    errorDeleteForeign:     The record can not be deleted because it is being used by another table.
    
     ##---------------------- ERRORES----------------------------##
     ##-------------------------- ERRORES --------------------##
