--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -3,7 +3,7 @@ culture:                  Español
 dictionary:
   default:
     ##----------------------SISTEMA-------------------------##
-    SantaHelena:          Santa Helena
+    SantaHelena:          SANTA HELENA
     sesion:               Sesion
     logout:               Logout
     login:                Login
