Adicion Importante:  -Implementacion De Modulo Ingreso Caña: Index Basico  -Adicion De Palabras a Diccionario  -Cambios en la Base De Datos  -Cambios En Menu

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -207,6 +207,7 @@ dictionary:
     infoDetailIncome:     Income Cane Detail Information
        
     ##---------------------- INGRESO CAÑA----------------------------## 
+    reedIncome:           Reed Income
     ##---------------------- SOLICITUD INSUMO-------------------------##
     inputRequest:         Request Input
        
