--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -42,7 +42,12 @@ dictionary:
     ##----------------------USUARIO-------------------------##
     id:                   Id
     user:                 Usuario
+    editUser:             Editar Usuario
+    newUser:              Nuevo Usuario
     pass:                 Contraseña
+    infoUser:             Información del Usuario
+    Enter your User:      Ingrese su Usuario
+    Enter your Password:  Ingrese su Contraseña
     ##----------------------USUARIO-------------------------##
     
     ##----------------------TIPO EMPAQUE-------------------------##
@@ -250,6 +255,7 @@ dictionary:
     errorLengthDirection:   Error Su Direction (%direccion%) Excede La Cantidad Maxima de Caracteres (%caracteres%).
     errorLengthNumIdentification: Error Su Numero de Identificaciòn (%numIdentificacion%) Excede La Cantidad Maxima de Caracteres (%caracteres%).
     errorMail:              Los Correos No Coinciden.
+    errorLenghtUser:        Error Su Nombre de Usuario (%usuario%) Excede La Cantidad Maxima de Caracteres (%caracteres%).
     errorLengthCredential:  Error Su Descripción (%descripcion%) Excede La Cantidad Maxima de Caracteres (%caracteres%).
     errorLenghtTurn:        Error su Turno (%turno%) Excede La cantidad Maxima De caracteres (%caracteres%).
     errorLenghtBrix:        Error su Brix (%brix%) Excede La cantidad Maxima De caracteres (%caracteres%).
